[package]
name = "repo2vec-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
neon = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
git2 = "0.16"
dirs = "5.0.1"
hex-literal = "0.4.1"
homedir = "0.2.1"
ignore = "0.4.20"
ndarray = "0.15.6"
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
sha1 = "0.10.6"
tempfile = "3.8.1"
